Remplacement de la base SQL sqllite par postgres pour heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,12 @@
 # gem 'pg'
 #
 default: &default
-  adapter: sqlite3
-  encoding: unicode
+  adapter: postgresql
+  database: isitix_production
+  pool: 5
+  timeout: 5000
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: 5
 
 development:
   <<: *default
@@ -79,7 +80,7 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  adapter: postgresql
   database: isitix_production
-  username: isitix
-  password: <%= ENV['ISITIX_DATABASE_PASSWORD'] %>
+  pool: 5
+  timeout: 5000
