--- a/config/database.yml
+++ b/config/database.yml
@@ -16,16 +16,18 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
   pool: 5
   timeout: 5000
+  host: localhost
+  username: isitix
+  password: isitix
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
 
 development:
   <<: *default
   database: isitix_development
-  username: postgres
-  password: a$g+msx
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,6 +62,7 @@ development:
 test:
   <<: *default
   database: isitix_test
+
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
